--- a/index.html
+++ b/index.html
@@ -9,5 +9,28 @@
 </head>
 <body>
     <!-- Jack's page -->
+    <section class="jacks-sect" >
+        <div class="cs1">
+            <div class="top-nav" >
+                <img src="./images/JacksImg/logo.svg" alt="" width="48" height="48">
+                <ul class="jacks-list" style="position: relative;">
+                    <li class="jacks-list-item"><b class="sp">00</b><a href="./index.html" target="_blank" class="df"> HOME</a></li>
+                    <li class="jacks-list-item"><b class="sp">01</b> <a href="./commander.html" target="_blank" class="df">DESTINATION</a></li>
+                    <li class="jacks-list-item"><b class="sp">02</b> <a href="./moon.html" target="_blank" class="df">CREW</a></li>
+                    <li class="jacks-list-item"><b class="sp">03</b> <a href="./temin.html" target="_blank" class="df">TECHNOLOGY</a></li>
+                    <div class="background-filter"></div>
+                </ul>
+            </div>
+            <div class="middle-info">
+                <p class="middle-text">
+                    <h5>SO, YOU WANT TO TRAVEL TO</h5>
+                    <span class="h1">SPACE</span>
+                   <p class="p"> Let’s face it if you want to go to space, you might as well genuinely go to outer space and not hover kind of on the edge of it. Well sit back, and relax because we’ll give you a truly out of this world experience!</p>
+                   
+                </p>
+                <h5 class="h55">EXPLORE</h5>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
