--- a/moon.html
+++ b/moon.html
@@ -8,6 +8,46 @@
     <title>MOON</title>
 </head>
 <body>
-    <!-- Ahmad's page -->
+      <main class="site__main">
+            <div class="hero__logo">
+                <div class="logo__img">
+                    <img src="./images/Ahmadsimg/Group 27.svg" alt="header__logo" width="48" height="48">
+                </div>
+                <ul class="hero__list">
+                    <li class="hero__item">
+                        <a class="hero__text" href=""><span>00</span> HOME</a>
+                    </li>
+                    <li class="hero__item">
+                        <a class="hero__text" href=""><span>01</span> DESTINATION</a>
+                    </li>
+                    <li class="hero__item">
+                        <a class="hero__text" href=""><span>03</span>CREW</a>
+                    </li>
+                    <li class="hero__itam4">
+                        <a class="hero__text" href=""><span>04</span>TECHNOLOGY</a>
+                    </li>
+                </ul>
+            </div>
+            <section> 
+                  <div class="wrapper">
+                  <div class="wrapper__title">            
+                          <h2 class="text__title"><span class="text__span">01</span>Pick your destination</h2>
+                          <img class="wrapper__img" src="./images/Ahmadsimg/moon.png" alt="moon" width="445" height="445">
+                  </div>
+                  <ul class="wrappper__list">
+                   <ul class="list"> 
+                    <li class="item"><a href="">MOON</a></li>
+                    <li class="item"><a href="">MARS</a></li>
+                    <li class="item"><a href="">EUROPA</a></li>
+                    <li class="item"><a href="">TITAN</a></li>
+                   </ul>
+                   <h1 class="title">MOON</h1>
+                   <p class="text">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
+                  <div class="div__button">
+                  </div>
+                </ul>
+                  </div>
+            </section>
+      </main>
 </body>
 </html>
