--- a/moon.html
+++ b/moon.html
@@ -15,16 +15,16 @@
                 </div>
                 <ul class="hero__list">
                     <li class="hero__item">
-                        <a class="hero__text" href=""><span>00</span> HOME</a>
+                        <a class="hero__text" href="./index.html"><span>00</span> HOME</a>
                     </li>
                     <li class="hero__item">
-                        <a class="hero__text" href=""><span>01</span> DESTINATION</a>
+                        <a class="hero__text" href="./commander.html"><span>01</span> DESTINATION</a>
                     </li>
                     <li class="hero__item">
-                        <a class="hero__text" href=""><span>03</span>CREW</a>
+                        <a class="hero__text" href="./moon.html"><span>03</span>CREW</a>
                     </li>
                     <li class="hero__itam4">
-                        <a class="hero__text" href=""><span>04</span>TECHNOLOGY</a>
+                        <a class="hero__text" href="./temin.html"><span>04</span>TECHNOLOGY</a>
                     </li>
                 </ul>
             </div>
