I wrote my own code for my team.

--- a/commander.html
+++ b/commander.html
@@ -9,5 +9,35 @@
 </head>
 <body>
     <!-- Ozodbek's page -->
+
+    <section>
+        <div class="second__page">
+            <div class="second__navbar">
+                <img src="./images/Ozodbek.images/logo.svg" alt="Logo" class="second__logo" width="48px" height="48px">
+
+            <nav class="second__nav">
+                <a href="./index.html" class="nav__home"> <b class="home__b">00</b> Home</a>
+                <a href="./moon.html" class="nav__destination"> <b class="destination__b">02</b> DESTINATION</a>
+                <a href="./commander.html" class="nav__crew"> <b class="crew__b">03</b> CREW</a>
+                <a href="./temin.html" class="nav__technology"> <b class="technology__b">04</b> TECHNOLOGY</a>
+            </nav>
+            </div>
+
+
+            
+
+            <h4 class="second__number">02</h4>
+            <h4 class="second__title">Meet your crew</h4>
+
+            <h3 class="second__commander">Commander</h3>
+
+            <h2 class="second__title-2">Douglas Hurley</h2>
+
+            <p class="second__text">Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former NASA astronaut. He launched into space for the third time as commander of Crew Dragon Demo-2.</p>
+
+            <img src="./images/Ozodbek.images/man.png" alt="a CREW" class="second__surface" width="568px" height="712px">
+
+        </div>
+    </section>
 </body>
 </html>
